--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>LB-ECM</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="/src/assets/svg/logo-new.svg">
+  <link rel="icon" type="image/x-icon" href="./assets/svg/logo-new.svg">
 </head>
 <body>
   <app-root></app-root>
